tests/rosetta/out/Haskell/99-bottles-of-beer.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/99-bottles-of-beer.hs:112:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/99-bottles-of-beer.hs:107:1
                 /workspace/mochi/tests/rosetta/out/Haskell/99-bottles-of-beer.hs:112:1
    |
112 | main = do
    | ^^^^
